--- a/app/views/grants/_sortable_table.html.haml
+++ b/app/views/grants/_sortable_table.html.haml
@@ -2,7 +2,7 @@
   %thead
     %tr
       %th
-        = sort_link(q, :title, 'Grant Title', { title: 'Sort on Grant Title' })
+        = sort_link(q, :name, 'Name', { title: 'Sort on Grant Name' })
       %th
         = sort_link(q, :state, 'State', { title: 'Sort on State' })
       %th
