--- a/app/views/profiles/panels/index.html.haml
+++ b/app/views/profiles/panels/index.html.haml
@@ -39,6 +39,6 @@
           %td
             = time_tag(grant.review_close_date.end_of_day, grant.review_close_date.end_of_day.to_formatted_s(:date_only))
           %td
-            = grant.panel.start_datetime.present? ? time_tag(grant.panel.start_datetime, grant.panel.start_datetime.to_formatted_s(:default)) : 'Not Scheduled'
+            = grant.panel.start_datetime.present? ? time_tag(grant.panel.start_datetime, grant.panel.start_datetime.to_fs) : 'Not Scheduled'
 
   != pagy_foundation_nav(@pagy_a)
