Task/upgrade rails to 7.0.8 (#1030)
* WIP: Update spring gem per rails upgrade guide

* WIP: dev/test gem updates, specs pass

* WIP: remove deprecated return_false_on_aborted_enqueue config as part of rails upgrade

* WIP: remove unused draper gem

* WIP: more gem updates

* WIP: update jquery-rails

* WIP: update pagy gem and initializer

* WIP: Bump ransack gem, fix deprecation message re: sort_link arguments

* WIP: Fix review score sorting to favor submitted reviews

* WIP: update discard

* WIP: update paper_trail gem

* WIP: update american_date and validates_timeliness

* WIP: update xls related gem, specify wicked_pdf version

* WIP: Upgrade to rails 7.0.8

* WIP: Fix "Deprecate passing a format to `#to_s` in favor of `#to_fs`" warnings

* WIP: update config per previous commit deprecation warning

* WIP: Remove last Foundation CSS `abide` reference. After draft submission added, form should submit regardless

* WIP: misc formatting, clarification

* WIP: spec fixes, formatting

* Fix draft grant spec on `grant.undiscard`

* WIP: Remove trix gem in favor of rails native actiontext

* WIP: actiontext:install

* WIP:  to 7.0.8, configs, specs pass

* WIP: Add comment re Date#to_s deprecation and paper_trail

--- a/app/views/grant_submissions/submissions/reviews/_form.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_form.html.haml
@@ -4,7 +4,7 @@
   .callout.warning
     Review period is closed
 
-= form_for review, url: grant_submission_review_url(grant, submission, review), html: { novalidate: true, data: { abide: '' } }, local: true, data: { turbo: false } do |f|
+= form_for review, url: grant_submission_review_url(grant, submission, review), html: { novalidate: true }, local: true, data: { turbo: false } do |f|
   - if review.criteria_reviews.any?
     %h3
       Review Criteria
@@ -16,11 +16,7 @@
 
   = render partial: 'overall_impact', locals: { f: f, disabled: disabled }
 
-  .alert.callout{ style: 'display: none', data: { abide: { error: true } } }
-    %p
-      Please check the required scores.
-
   .actions
-    = f.button 'Save as Draft', type: 'submit', disabled: disabled, name: 'review[state]', value: Review::REVIEW_STATES[:draft], data: { confirm: "You are saving this review as a draft. Scores here will not count toward the submission until this review has been submitted. You may submit it until #{grant.review_close_date}.", disable_with: 'Please wait'}, class: 'secondary button'
-    = f.button 'Submit Your Review', type: 'submit', disabled: disabled, name: 'review[state]', value: Review::REVIEW_STATES[:submitted], data: { disable_with: "Please wait..." }, class: 'success button'
+    = f.button 'Save as Draft', name: 'review[state]', value: Review::REVIEW_STATES[:draft], type: 'submit', disabled: disabled, data: { confirm: "You are saving this review as a draft. Scores here will not count toward the submission until this review has been submitted. You may submit it until #{grant.review_close_date.to_fs}.", disable_with: 'Please wait'}, class: 'secondary button'
+    = f.button 'Submit Your Review', name: 'review[state]', value: Review::REVIEW_STATES[:submitted], type: 'submit', disabled: disabled, data: { disable_with: "Please wait..." }, class: 'success button'
     
