Fix file upload clear button js load

--- a/app/views/grant_submissions/submissions/_form.html.haml
+++ b/app/views/grant_submissions/submissions/_form.html.haml
@@ -27,6 +27,6 @@
 
     = link_to 'Cancel', @grant, class: 'button secondary clear'
 :javascript
-  $(function () {
+  document.addEventListener('turbo:load', function() {
     Grant.FormBuilderUploadSetup();
   });
