--- a/app/views/grants/_sortable_table.html.haml
+++ b/app/views/grants/_sortable_table.html.haml
@@ -21,11 +21,11 @@
         %td
           = grant.state.titleize
         %td
-          = time_tag(grant.publish_date.beginning_of_day, grant.publish_date.beginning_of_day.to_formatted_s(:date_only))
+          = time_tag(grant.publish_date.beginning_of_day, date_mmddyyyy(grant.publish_date.beginning_of_day))
         %td
-          = time_tag(grant.submission_open_date.beginning_of_day, grant.submission_open_date.beginning_of_day.to_formatted_s(:date_only))
+          = time_tag(grant.submission_open_date.beginning_of_day, date_mmddyyyy(grant.submission_open_date))
         %td
-          = time_tag(grant.submission_close_date.end_of_day, grant.submission_close_date.end_of_day.to_formatted_s(:date_only))
+          = time_tag(grant.submission_close_date.end_of_day, date_mmddyyyy(grant.submission_close_date))
         - if policy(grant).edit?
           = render 'grants/manage_links', { grant: grant}
         - else
