Add clarifying comments

--- a/app/views/grant_submissions/submissions/_date_optional_time_picker.html.haml
+++ b/app/views/grant_submissions/submissions/_date_optional_time_picker.html.haml
@@ -1,3 +1,4 @@
+-# Note: Date only. _optional_time_picker is legacy to FormBuilder and is not available.
 %div{data: { date_optional_time_picker: true } }
   = f.text_field(attribute: dt_input, options: options.merge( { value: value, id: css_id } ) )
   :javascript
