WIP: misc formatting, styles

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -81,6 +81,7 @@ header {
   main {
     .callout {
       height: fit-content;
+      list-style: inside;
       width: 100%;
       a {
         text-decoration: underline;
